Redesigned the entire pomodoro timer. Changed from a cricle to a rounded corner square, simplified it a lot, moved buttons inside the timer itself, added the option to hide them for a more minimalis look, and removed some unused or duplicate css

--- a/src/App.css
+++ b/src/App.css
@@ -46,3 +46,9 @@
     width: 30px;
     height: 30px;
 }
+.hide{
+    height: 0 !important;
+    transition: all 0.1s;
+    overflow: hidden;
+    opacity: 0;
+}
