--- a/src/components/Pomodoro/Pomodoro.module.css
+++ b/src/components/Pomodoro/Pomodoro.module.css
@@ -249,12 +249,13 @@
     flex-direction: column;
     align-items: center;
     border-left: 1px solid rgba(221, 221, 221, 0.2);
-    justify-content: center;
-    gap: 10px;
+    justify-content: space-between;
     background: linear-gradient(to top, #FF8C00 var(--progress), transparent var(--progress));
+    padding: 10px 0;
 }
 .minimized-pomodoro .info{
     width: 50px;
+    height: 80px;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -262,7 +263,6 @@
     text-align: center;
     background-color: #171717;
     border-radius: 5px;
-    padding: 10px 0;
     border: 1px solid transparent;
 }
 .minimized-pomodoro .minimized-time{
@@ -292,19 +292,19 @@
     gap: 2px;
 }
 .maximize-button{
-    width: 40px;
-    height: 40px;
+    width: 50px;
+    height: 50px;
     background-color: transparent;
     border: none;
 }
 .minimized-pomodoro .buttons{
     width: 100%;
-    height: auto;
+    height: 240px;
     display: flex;
     flex-direction: column;
     align-items: center;
     padding: 0;
-    padding-bottom: 15px;
+    gap: 10px;
 }
 .minimized-pomodoro .buttons button{
     width: 50px;
