--- a/src/components/Pomodoro/Pomodoro.module.css
+++ b/src/components/Pomodoro/Pomodoro.module.css
@@ -58,7 +58,7 @@
 }
 .timer-info{
     width: 100%;
-    height: calc(100% - 100px);
+    height: 100%;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -104,18 +104,24 @@
 }
 
 .buttons{
-    width: 100%;
-    height: 80px;
+    position: absolute;
+    bottom: 10px;
+    width: 90%;
+    height: 100px;
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    padding: 0 10px;
+    padding: 10px;
     margin-bottom: 10px;
     transition: height 0.1s;
+    background-color: #0F0F0F;
+    border-radius: 10px;
+    gap: 10px;
 }
 .buttons.minimized-buttons{
     height: 30px;
+    background-color: transparent;
 }
 
 .buttons .extra-info{
@@ -140,7 +146,7 @@
     display: flex;
     align-items: center;
     justify-content: center;
-    background-color: #0F0F0F;
+    background-color: #171717;
     width: 75px;
     border: 1px solid transparent;
     transition: transform 0.1s ease-in-out, border-color 0.1s ease-in-out;
