--- a/src/components/MainPanel/Tasks/Tasks.module.css
+++ b/src/components/MainPanel/Tasks/Tasks.module.css
@@ -15,39 +15,47 @@
 }
 .header{
     width: 100%;
-    height: 30px;
+    height: 60px;
     display: flex;
     align-items: center;
     padding: 0 15px;
-    margin-bottom: 15px;
-    margin-top: 10px;
+    margin: 10px 0;
+    gap: 10px;
 }
 .maximize-tasks-button{
     background-color: transparent;
     border: none;
-    height: 30px;
-    width: 30px;
-    margin-right: 10px;
+    height: 40px;
+    width: 40px;
     display: flex;
     align-items: center;
     justify-content: center;
 }
 .maximize-tasks-button img{
-    width: 25px !important;
-    height: 25px !important;
+    width: 20px !important;
+    height: 20px !important;
 }
-.header h3{ 
+.header option,
+.header select,
+.category{
+    width: 150px !important;
+    height: 40px;
+    border: 1px solid rgba(221, 221, 221, 0.2);
+    border-radius: 10px;
+    padding: 0 10px;
+    font-size: 20px;
+    background-color: transparent;
     margin-right: auto;
 }
-.tasks .header p{
-    margin-right: auto;
+.category option{
+    background-color: #171717;
 }
 .header .task-buttons{
     margin-left: auto;
 }
 .header .task-buttons img{
-    height: 25px;
-    width: 25px;
+    height: 20px;
+    width: 20px;
     margin-right: 20px;
 }
 .header button{
@@ -70,21 +78,8 @@
     padding-top: 0;
     position: relative;
 }
-.tasks-category{
-    width: 100%;
-    height: 30px;
-    min-height: 30px;
-    display: flex;
-    flex-direction: column;
-    gap: 10px;
-    overflow: hidden;
-    transition: all 0.1s;
-}
-.tasks-category.extend{
-    height: auto !important;
-    min-height: fit-content !important;
-    transition: all 0.1s;
-}
+
+
 .tasks-container{
     width: 100%;
     height: auto;
@@ -107,44 +102,8 @@
     transition: all 0.1s;
     margin: 0 !important;
 }
-.filters{
-    width: 100%;
-    height: 50px;
-    display: flex;
-    align-items: center;
-    margin-top: 10px;
-    overflow: hidden;
-}
-.filters-container{
-    flex-grow: 1;
-    display: flex;
-    align-items: center;
-    gap: 10px;
-    padding-left: 10px;
-    overflow-x: auto;
-    white-space: nowrap
-}
-.expand-side-menu{
-    background-color: transparent;
-    border: none;
-    width: 50px;
-    margin-left: auto;
-}
 
 
-
-.filters::-webkit-scrollbar{
-    display: none;
-}
-.filter-button{
-    background-color: transparent;
-    border: 1px solid rgba(211, 211, 211, 0.2);
-    padding: 2px 5px;
-}
-.filter-button.selected-category{
-    background-color: white;
-    color: black;
-}
 
 
 
