--- a/src/components/MainPanel/MainPanel.module.css
+++ b/src/components/MainPanel/MainPanel.module.css
@@ -6,6 +6,24 @@
     display: flex;
     flex-direction: column;
     min-width: 350px;
+    position: relative;
+}
+.minimize-panel-button{
+    position: absolute;
+    left: 10px;
+    bottom: 10px;
+    width: 50px;
+    height: 50px;
+    background-color: transparent;
+    border: none;
+    z-index: 50;
+}
+.maximize-panel-button{
+    width: 50px !important;
+    height: 50px !important;
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
 .hide{
     height: 0 !important;
@@ -38,8 +56,11 @@
     align-items: center;
     overflow-x: auto;
 }
+.navigation .buttons::-webkit-scrollbar{
+    display: none;
+}
 .navigation button{
-    width: auto;
+    width: 25%;
     height: 100%;
     padding: 0 10px;
     border: 2px solid transparent;
@@ -53,6 +74,10 @@
 .mainPanel .content{
     flex-grow: 1;
     max-height: calc(100% - 50px);
+}
+.mainPanel.hide-nav .content{
+    height: 100%;
+    max-height: 100%;
 }
 .mainPanel.hide .content{
     max-height: 100%;
