--- a/src/components/MainPanel/Tasks/Tasks.module.css
+++ b/src/components/MainPanel/Tasks/Tasks.module.css
@@ -66,27 +66,9 @@
     display: flex;
     flex-direction: column;
     gap: 10px;
-    padding: 20px;
+    padding: 20px 10px;
     padding-top: 0;
     position: relative;
-}
-
-
-.tasks-container{
-    width: 100%;
-    height: auto;
-    display: flex;
-    flex-direction: column;
-    gap: 10px;
-}
-.tasks-container-header{
-    width: 100%;
-    height: 30px;
-    min-height: 30px;
-    overflow: hidden;
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
 }
 .hide{
     height: 0 !important;
@@ -107,28 +89,37 @@
     min-height: 50px;
     display: flex;
     align-items: center;
-    gap: 10px;
+    gap: 5px;
     padding: 10px;
+    padding-left: 25px;
     border-radius: 5px;
     border: 2px solid transparent;
     overflow: hidden;
+    position: relative;
+}
+.task-pin-icon{
+    position: absolute;
+    left: 5px;
+    top: 19px;
+    height: 12px;
+    width: 12px;
 }
 .color{
-    width: 10px;
-    height: 10px;
-    min-width: 10px;
-    min-height: 10px;
-    border-radius: 50%;
+    width: 3px;
+    height: 100%;
+    min-width: 3px;
+    min-height: 100%;
 }
 .task.selected{
-    border: 2px solid white;
+    border-left: 2px solid white;
+    border-right: 2px solid white;
 }
 .task input[type="checkbox"]{
     height: 30px;
     width: 30px;
     min-height: 30px;
     min-width: 30px;
-    border-radius: 10px;
+    border-radius: 5px;
     background-color: transparent;
     appearance: none;
     border: 2px solid #fff
