--- a/src/components/Pomodoro/Pomodoro.module.css
+++ b/src/components/Pomodoro/Pomodoro.module.css
@@ -26,9 +26,9 @@
 
 
 .timer{
-    height: 100%;
-    width: 100%;
-    aspect-ratio: 1 / 1;
+    height: calc(100% - 10px);
+    width: calc(100% - 10px);
+    aspect-ratio: 1;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -324,15 +324,13 @@
 
 @media (orientation: portrait) {
     .pomodoro{
-        height: 100vw;
+        height: calc(100vw + 10px);
         width: 100vw;
         max-width: 100vw;
-        max-height: 100vw;
+        max-height: calc(100vw + 10px);
         min-width: 100vw;
-        min-height: 100vw;
+        min-height: calc(100vw + 10px);
         border-top: 1px solid rgba(211, 211, 211, 0.1);
-        margin-top: auto;
-        margin-bottom: 10px;
     }
     .timer{
         height: 100vw;
