--- a/src/components/MainPanel/Tasks/Tasks.module.css
+++ b/src/components/MainPanel/Tasks/Tasks.module.css
@@ -115,10 +115,10 @@
     border-right: 2px solid white;
 }
 .task input[type="checkbox"]{
-    height: 30px;
-    width: 30px;
-    min-height: 30px;
-    min-width: 30px;
+    height: 25px;
+    width: 25px;
+    min-height: 25px;
+    min-width: 25px;
     border-radius: 5px;
     background-color: transparent;
     appearance: none;
@@ -183,26 +183,34 @@ button{
 
 .new-task{
     position: absolute;
-    bottom: 10px;
-    left: 10px;
+    bottom: calc(50% - 150px);
+    left: 10px !important;
     width: calc(100% - 20px);
+    max-width: calc(100% - 20px);
     height: 300px;
-    background-color: #0F0F0F;
+    max-height: 300px;
+    min-height: 300px;
+    background-color: #171717;
     display: flex;
-    flex-direction: column;
-    gap: 10px;
-    padding: 10px;
-    position: absolute;
     animation-name: showNewTask;
     animation-duration: 0.1s;
-    border-radius: 5px;
+    border-radius: 10px;
     border: 1px solid rgba(211, 211, 211, 0.1);
     z-index: 15;
     padding: 20px 10px;
+    flex-wrap: wrap;
+    gap: 10px;
+    justify-content: center;
 }
-
+fieldset{
+    border: none;
+    display: flex;
+    flex-direction: column;
+    gap: 5px;
+}
 .new-task-header{
-    height: 30px;
+    height: 40px;
+    width: 100%;
     display: flex;
     justify-content: space-between;
     align-items: center;
@@ -211,6 +219,19 @@ button{
     border: 1px solid transparent;
     background-color: transparent !important;
 }
+#title-input{
+    width: calc(60% - 10px);
+}
+#priority-input{
+    width: calc(40% - 10px);
+}
+#due-date-input{
+    width: calc(60% - 10px);
+}
+#due-hour-input{
+    width: calc(40% - 10px);
+}
+
 @keyframes showNewTask {
     from{
         height: 0;
@@ -221,14 +242,8 @@ button{
         opacity: 1;
     }
 }
-fieldset{
-    border: none;
-    display: flex;
-    flex-direction: column;
-    gap: 5px;
-}
+
 .new-task input,
-.new-task #pin-task-input,
 .new-task select,
 .new-task option{
     height: 40px;
@@ -236,18 +251,16 @@ fieldset{
     border-radius: 5px;
     color: black;
     padding-left: 10px;
-    font-size: large;
+    font-size: 20px;
 }
-#color-input{
-    padding: 0;
-}
+
 .new-task .save-button{
-    background-color: #171717;
+    background-color: #0F0F0F;
     color: white;
-    margin-top: 30px;
-    height: 40px;
-    min-height: 40px;
-    max-height: 40px;
+    height: 50px;
+    min-height: 50px;
+    max-height: 50px;
+    width: 60%;
 }
 .new-task .header{
     width: 100%;
@@ -262,19 +275,6 @@ fieldset{
 .new-task .header button{
     background-color: transparent !important;
 }
-.same-line-top{
-    width: 100%;
-    display: grid;
-    grid-template-columns: 4fr 1fr;
-    gap: 10px;
-}
-.same-line-bottom{
-    width: 100%;
-    display: grid;
-    grid-template-columns: 2fr 1fr;
-    gap: 10px;
-}
-
 #pin-task-input option{
     color: black;
 }
@@ -291,11 +291,6 @@ fieldset{
         height: 100%;
         max-height: calc(100% - 120px);
         
-    }
-    .new-task{
-        width: 100%;
-        height: 100%;
-        left: 0;
     }
     .tasks .container{
         height: 100%;
