--- a/src/components/MainPanel/Home/Home.module.css
+++ b/src/components/MainPanel/Home/Home.module.css
@@ -31,19 +31,26 @@
     align-items: center;
 }
 
+.module{
+    padding: 10px;
+    background-color: #0F0F0F;
+    border-radius: 5px;
+    overflow: hidden;
+    width: 100%;
+    display: flex;
+    gap: 10px;
+    flex-direction: column;
+    min-height: fit-content;
+}
 /* habit */
 .habit{
-    width: 100%;
     height: 110px;
     min-height: 110px;
-    overflow: hidden;
     margin-bottom: 10px;
-    border-radius: 5px;
     gap: 15px;
     display: flex;
-    margin-bottom: 10px;
     flex-direction: column;
-    padding: 10px 0;
+    
 }
 
 .habit .habit-header{
@@ -72,7 +79,7 @@
     display: flex;
     justify-content: space-evenly;
     align-items: center;
-    background-color: #0F0F0F;
+    background-color: #171717;
     border-radius: 5px;
     align-self: center;
 }
@@ -93,7 +100,15 @@
     color: #ff4400;
     opacity: 1;
 }
-
+.module .content{
+    width: 100%;
+    height: 60px;
+    background-color: #171717;
+    padding: 10px;
+    display: flex;
+    justify-content: space-between;
+    border-radius: 5px;
+}
 
 
 @media (orientation: portrait) {
