--- a/src/components/SideMenu/Settings/Settings.module.css
+++ b/src/components/SideMenu/Settings/Settings.module.css
@@ -17,28 +17,28 @@
     gap: 10px;
     padding-left: 10px;
 }
+.settings h3{
+    margin: 10px 0;
+}
 .setting{
     width: 100%;
-    height: auto;
+    height: 50px;
+    min-height: 50px;
     display: flex;
-    flex-direction: column;
-    gap: 10px;
+    justify-content: space-between;
+    align-items: center;
+    padding: 0 15px;
+    border-bottom: 1px solid rgba(221,221,221,0.1);
 }
 .setting button{
-    background-color: transparent;
-    border: 1px solid transparent;
-    background-color: #0F0F0F;
-    height: 40px;
-    border-radius: 5px;
-    font-size: 20px;
-    padding: 0 10px;
-    width: fit-content;
-}
-.setting-buttons{
+    height: 50px;
     width: 100%;
+    padding: 0 15px;
+    background-color: transparent;
     display: flex;
     align-items: center;
-    gap: 10px;
+    justify-content: space-between;
+    border: none;
 }
 
 @media (orientation: portrait) {
