--- a/src/components/MainPanel/History/History.module.css
+++ b/src/components/MainPanel/History/History.module.css
@@ -17,7 +17,7 @@
     padding: 5px 10px;
     border-radius: 5px;
     gap: 10px;
-    border-left: 5px solid #0F0F0F;
+    border-left: 5px solid var(--accent-color);
 
 }
 .date{
