--- a/src/components/MainPanel/Home/Home.module.css
+++ b/src/components/MainPanel/Home/Home.module.css
@@ -33,7 +33,7 @@
 
 .module{
     padding: 10px;
-    background-color: #0F0F0F;
+    background-color: var(--module-bg-color);
     border-radius: 5px;
     overflow: hidden;
     width: 100%;
@@ -79,7 +79,7 @@
     display: flex;
     justify-content: space-evenly;
     align-items: center;
-    background-color: #171717;
+    background-color: var(--bg-color);
     border-radius: 5px;
     align-self: center;
 }
@@ -97,13 +97,13 @@
     opacity: 0.7;
 }
 .selected-day p{
-    color: #ff4400;
+    color: var(--accent-color);
     opacity: 1;
 }
 .module .content{
     width: 100%;
     height: 60px;
-    background-color: #171717;
+    background-color: var(--bg-color);
     padding: 10px;
     display: flex;
     justify-content: space-between;
