--- a/src/components/MainPanel/MainPanel.module.css
+++ b/src/components/MainPanel/MainPanel.module.css
@@ -69,7 +69,7 @@
     
 }
 .selected{
-    border-bottom: 2px solid rgba(211, 211, 211, 0.3) !important;
+    border-bottom: 2px solid var(--accent-color) !important;
 }
 .content{
     flex-grow: 1;
