--- a/src/components/Pomodoro/Pomodoro.module.css
+++ b/src/components/Pomodoro/Pomodoro.module.css
@@ -37,7 +37,7 @@
     position: relative;
 }
 .timer-background{
-    background-color: white;
+    background-color: var(--accent-color);
     width: 100%;
     height: 100%;
     aspect-ratio: 1 / 1;
@@ -49,7 +49,7 @@
 .timer-content{
     width: calc(100% - 10px);
     height: calc(100% - 10px);
-    background-color: #171717;
+    background-color: var(--bg-color);
     border-radius: 15px;
     display: flex;
     flex-direction: column;
@@ -68,15 +68,10 @@
 .timer-info.expanded-info{
     height: calc(100% - 40px);
 }
-:global(.App.amoled) .timer-content{
-    background-color: black;
-}
 .timer-content .time{
     font-size: 50px;
 }
-:global(.App.amoled) .buttons button{
-    background-color: black;
-}
+
 
 .timer-background.animated-session-end {
     animation: flashGradient 0.5s infinite alternate ease-in-out;
@@ -100,23 +95,20 @@
     gap: 5px;
 }
 .current-section-counter{
-    color: #ff4500 !important;
+    color: var(--accent-color) !important;
 }
 
 .buttons{
     position: absolute;
     bottom: 10px;
     width: 90%;
-    height: 100px;
+    height: 50px;
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    padding: 10px;
     margin-bottom: 10px;
     transition: height 0.1s;
-    background-color: #0F0F0F;
-    border-radius: 10px;
     gap: 10px;
 }
 .buttons.minimized-buttons{
@@ -146,14 +138,14 @@
     display: flex;
     align-items: center;
     justify-content: center;
-    background-color: #171717;
+    background-color: var(--bg-color);
     width: 75px;
     border: 1px solid transparent;
     transition: transform 0.1s ease-in-out, border-color 0.1s ease-in-out;
 }
 .buttons button:active {
-    transform: scale(0.95);
-    border-color:rgba(211, 211, 211, 0.3);
+    transform: scale(0.9);
+    border-color: var(--accent-color);
 }
 .expand-buttons-button{
     background-color: transparent !important;
@@ -178,8 +170,8 @@
     position: absolute;
     right: 0;
     bottom: 0;
-    background-color: #171717;
-    z-index: 20;
+    background-color: var(--bg-color);
+    z-index: 50;
     padding: 10px;
     animation-name: showPomodoroSettings;
     animation-duration: 0.1s;
@@ -224,7 +216,7 @@
     display: flex;
     align-items: center;
     padding: 0 15px;
-    border-bottom: 1px solid rgba(221,221,221,0.1);
+    border-bottom: 1px solid var(--accent-color);
     gap: 20px;
 }
 .setting p{
@@ -263,9 +255,12 @@
     align-items: center;
     gap: 10px;
     text-align: center;
-    background-color: #171717;
+    background-color: var(--bg-color);
     border-radius: 5px;
     border: 1px solid transparent;
+}
+.minimized-pomodoro .buttons-container{
+    width: 250px;
 }
 .minimized-pomodoro .minimized-time{
     width: 100%;
@@ -300,7 +295,7 @@
     border: none;
 }
 .minimized-pomodoro .buttons{
-    width: 100%;
+    width: auto;
     height: 240px;
     display: flex;
     flex-direction: column;
@@ -343,19 +338,31 @@
         overflow: hidden;
         align-items: center;
     }
-    .minimized-pomodoro .buttons{
+    .minimizedButtons{
+        display: flex;
+        gap: 10px;
         flex-direction: row;
         padding: 0;
         height: 60px;
+        width: 250px;
         margin: 0;
         background-color: transparent;
         align-items: center;
         
     }
+    .minimizedButtons button{
+        width: 50px;
+        height: 50px;
+        background-color: var(--bg-color);
+        border: none;
+    }
    
     .minimized-pomodoro .info{
         height: 50px;
         width: 100px;
+        display: flex;
+        align-items: center;
+        justify-content: center;
     }
     .minimized-pomodoro .minimized-time{
         flex-direction: row;
@@ -363,10 +370,9 @@
         width: auto;
     }
     .minimized-pomodoro .maximize-button{
-        margin: 0 15px;
         z-index: 10;
     }
     .minimized-pomodoro{
-        background: linear-gradient(to right, #FF8C00 var(--progress), transparent var(--progress));
+        background: linear-gradient(to right, var(--accent-color) var(--progress), transparent var(--progress));
     }
 }
