--- a/src/components/common/FullScreenModal/FullScreenModal.module.css
+++ b/src/components/common/FullScreenModal/FullScreenModal.module.css
@@ -22,7 +22,7 @@
     height: 40px;
     font-size: 20px;
     padding: 0 10px;
-    background-color: #171717;
+    background-color: var(--bg-color);
 }
 .close-button{
     margin-left: auto;
