--- a/src/components/MainPanel/MainPanel.module.css
+++ b/src/components/MainPanel/MainPanel.module.css
@@ -14,9 +14,13 @@
     bottom: 10px;
     width: 50px;
     height: 50px;
-    background-color: transparent;
-    border: none;
+    background-color: var(--secondary-color);
+    border: 1px solid rgba(221, 221, 221, 0.1);
     z-index: 50;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    
 }
 .maximize-panel-button{
     width: 50px !important;
