--- a/src/components/Pomodoro/Pomodoro.module.css
+++ b/src/components/Pomodoro/Pomodoro.module.css
@@ -64,6 +64,12 @@
     flex-direction: column;
     align-items: center;
     justify-content: center;
+    user-select: none;
+    transition: transform 0.1s;
+}
+.timer-info:active{
+    transform: scale(0.9);
+    transition: transform 0.1s;
 }
 .timer-info.expanded-info{
     height: calc(100% - 40px);
