Added a Restore icon, added a restore task button that is shown only for deleted tasks, added a reducer to restore deleted tasks and a new category to see deleted tasks

--- a/src/components/Pomodoro/Pomodoro.module.css
+++ b/src/components/Pomodoro/Pomodoro.module.css
@@ -340,9 +340,11 @@
         width: 100vw;
         padding: 0;
         flex-direction: row;
+        border: none;
         border-top: 1px solid rgba(211, 211, 211, 0.1);
         overflow: hidden;
         align-items: center;
+        z-index: 20;
     }
     .minimizedButtons{
         display: flex;
