--- a/src/App.css
+++ b/src/App.css
@@ -15,13 +15,18 @@
     background-color: var(--bg-color);
     overflow: hidden !important;
 }
+.App.swapped{
+    flex-flow: row-reverse;
+}
 @media (orientation: portrait) {
     .App{
         flex-direction: column;
         overflow-y: auto;
         padding: 0;
     }
-
+    .App.swapped{
+        flex-flow: column-reverse;
+    }
 }
 
 .icon{
