--- a/src/components/MainPanel/History/History.module.css
+++ b/src/components/MainPanel/History/History.module.css
@@ -17,8 +17,8 @@
     padding: 5px 10px;
     border-radius: 5px;
     gap: 10px;
-    border-left: 5px solid var(--accent-color);
-
+    border: 1px solid var(--general-border-color);
+    border-left: 3px solid var(--selected-item-color);
 }
 .date{
     margin: 0;
