--- a/src/components/SideMenu/Settings/Settings.module.css
+++ b/src/components/SideMenu/Settings/Settings.module.css
@@ -28,7 +28,7 @@
     justify-content: space-between;
     align-items: center;
     padding: 0 15px;
-    border-bottom: 1px solid rgba(221, 221, 221, 0.1);
+    border-bottom: 1px solid var(--settings-divider-color);
 }
 .setting button{
     height: 50px;
