--- a/src/index.css
+++ b/src/index.css
@@ -35,6 +35,7 @@
     --button-bg-color: #171717;
     --checkbox-color: #ff4500;
     --general-border-color: rgba(221, 221, 221, 0.1);
+    --toggle-background-color: #ffffff;
 }
 *{
     box-sizing: border-box;
@@ -58,6 +59,7 @@
     --button-bg-color: #171717;
     --checkbox-color: #ff4500;
     --general-border-color: rgba(221, 221, 221, 0.1);
+    --toggle-background-color: #ffffff;
 }
 
 /* Light Theme */
@@ -75,6 +77,7 @@
     --button-bg-color: #ffffff;
     --checkbox-color: #ff4500;
     --general-border-color: rgba(0, 0, 0, 0.2);
+    --toggle-background-color: #d8d8d8;
 }
 .light-theme img{
     filter: invert(1);
@@ -94,6 +97,7 @@
     --button-bg-color: #171717;
     --checkbox-color: #ff4500;
     --general-border-color: rgba(221, 221, 221, 0.1);
+    --toggle-background-color: #FFFFFF;
 }
 
 /* Sakura Theme */
@@ -104,13 +108,14 @@
     --secondary-color: #cacaca;  
     --module-bg-color: #F5B7B1;
     --timer-border-color: lightgray;
-    --settings-divider-color: rgba(221, 221, 221, 0.1);
-    --selected-item-color: #ff4500;
+    --settings-divider-color: rgba(0, 0, 0, 0.2);
+    --selected-item-color: #F5B7B1;
     --flash-animation-color: red;
     --button-border-color: rgba(221, 221, 221, 0.1);
-    --button-bg-color: #171717;
-    --checkbox-color: #ff4500;
-    --general-border-color: rgba(221, 221, 221, 0.1);
+    --button-bg-color: #FFFFFF;
+    --checkbox-color: #F5B7B1;
+    --general-border-color: rgba(0, 0, 0, 0.1);
+    --toggle-background-color: #d8d8d8;
 }
 .sakura-theme img{
     filter: invert(1);
@@ -124,10 +129,11 @@
     --module-bg-color: #252525;
     --timer-border-color: lightgray;
     --settings-divider-color: rgba(221, 221, 221, 0.1);
-    --selected-item-color: #ff4500;
+    --selected-item-color: #47c8c0;
     --flash-animation-color: red;
     --button-border-color: rgba(221, 221, 221, 0.1);
-    --button-bg-color: #171717;
-    --checkbox-color: #ff4500;
+    --button-bg-color: #373b3e;
+    --checkbox-color: #47c8c0;
     --general-border-color: rgba(221, 221, 221, 0.1);
+    --toggle-background-color: #FFFFFF;
 }
