--- a/src/components/MainPanel/Tasks/Tasks.module.css
+++ b/src/components/MainPanel/Tasks/Tasks.module.css
@@ -62,6 +62,7 @@
     width: 100%;
     height: 100%;
     max-height: 100%;
+    min-height: 300px;
     overflow-y: scroll !important;
     display: flex;
     flex-direction: column;
