--- a/src/components/MainPanel/Tasks/Tasks.module.css
+++ b/src/components/MainPanel/Tasks/Tasks.module.css
@@ -1,6 +1,7 @@
 .tasks{
     height: 100%;
     width: 100%;
+    max-height: 100%;
     overflow: hidden;
     display: flex;
     flex-direction: column;
