--- a/src/components/MainPanel/Home/Home.module.css
+++ b/src/components/MainPanel/Home/Home.module.css
@@ -11,6 +11,24 @@
     gap: 10px;
     padding: 10px;
 }
+.warning-message{
+    width: 100%;
+    height: auto;
+    padding: 20px;
+    background-color: orange;
+    text-shadow: 1px 1px 1px black;
+    border-radius: 5px;
+}
+@media screen and (max-width: 850px) and (orientation: portrait) {
+    .warning-message{
+        display: none;
+    }
+}
+@media screen and (max-width: 850px) and (orientation: landscape) {
+    .warning-message{
+        display: none;
+    }
+}
 .top{
     width: 100%;
     height: 40px;
